<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    app:layout_goneMarginBottom="10dp"
    tools:context=".ui.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/todo_signup"
            tools:srcCompat="@mipmap/logo_foreground" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="cursive"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/on_road_vehicle_breakdown_assistance_orvba_signup"
            android:textSize="60sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_view"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="@string/login_signup"
            android:textColor="#1B1515"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_view"
            android:fontFamily="sans-serif-black"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="#1B1515"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>