<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:scrollbars="vertical"
    tools:context=".ui.PostFeedbackActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:scrollbars="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="135dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/post_feedback"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/feedback_edit_text"
            android:layout_width="342dp"
            android:layout_height="321dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@color/cardview_light_background"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/enter_your_feedback"
            android:inputType="textMultiLine" />




    <Button
        android:id="@+id/post_button"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_view"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:text="@string/post_feedbackx"
        android:textColor="#1B1515"
        android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>
