<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignupActivity"
    android:background="@drawable/background_main"
    android:scrollbars="vertical">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            android:layout_gravity="center"
            android:gravity="center"
            android:scrollbars="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                tools:srcCompat="@mipmap/logo_foreground"
                android:layout_marginBottom="10dp"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="60sp"
                android:text="Sign Up."
                android:fontFamily="cursive"
                android:gravity="center"
                android:padding="10dp"
                android:layout_marginBottom="10dp"
                />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_box"
        android:layout_marginBottom="10dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:gravity="center"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_name"/>

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_box"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:gravity="center"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_email"/>


    <EditText
        android:id="@+id/phone_number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_box"
        android:layout_marginBottom="10dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:gravity="center"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_phone"/>

    <EditText
        android:id="@+id/role_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_box"
        android:layout_marginBottom="10dp"
        android:hint="@string/role"
        android:inputType=""
        android:gravity="center"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_role"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_box"
        android:layout_marginBottom="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:gravity="center"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_lock"/>


            <Button
                android:id="@+id/signup_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_view"
                android:fontFamily="sans-serif-black"
                android:padding="10dp"
                android:text="Sign up"
                android:textColor="#1B1515"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <View
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:background="@android:color/black"/>
                <TextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:textSize="20dp"
                    android:text="Or"
                    android:gravity="center"/>
                <View
                    android:layout_width="100dp"
                    android:layout_height="2dp"
                    android:background="@android:color/black"/>
            </LinearLayout>
            <TextView
                android:id="@+id/loginAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login"
                android:clickable="true"
                android:textStyle="bold"
                android:textSize="20dp"
                />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
